# een-eval-framework

./: .gitignore  CLI_DOCUMENTATION.md  README.md  __init__.py  cli.py  pyproject.toml
core/: dataset.py  evaluation.py  metrics.py  models.py
docs/: DEBATES.md  DataFlow.md  FRAMEWORK_UPDATE_SUMMARY.md  LLAMACPP_SUPPORT.md
examples/: README.md  basic_config.yaml  comprehensive_usage.py  updated_config.yaml  usage_examples.py  vllm_config.yaml
src/een_eval/: __init__.py  cli.py
src/een_eval/core/: __init__.py  dataset.py  evaluation.py  metrics.py  models.py
src/een_eval/utils/: docker.py  io.py  module_loader.py  validation.py
src/een_eval/workflow/: config.py  evaluation.py  inference.py  workflow.py
tests/: test_cli.py  test_inference_thread_safety.py
utils/: __init__.py  io.py  validation.py
workflow/: config.py  evaluation.py  inference.py  workflow.py
